<resources>
    <string name="app_name">BeeMusic</string>
    <string name="title_permission">Permission necessary</string>
    <string name="msg_external_storage_permision">
        We need external permission to load allmusic
    </string>
    <string name="msg_not_load_mediastore">App not load music in media store</string>
    <string name="error_support_scale">ScaleType %s not supported</string>
    <string name="error_bound_view">adjustViewBounds not supported</string>
    <string name="title_song">Song</string>
    <string name="title_album">Album</string>
    <string name="title_singer">Singer</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_feedback">FeedBack</string>
    <string name="title_song_local">Local Song</string>
    <string name="msg_open_drawer">open</string>
    <string name="msg_close_drawer">close</string>
    <string name="title_search">search</string>
    <string name="search_hint">search...</string>
    <string name="action_remove">remove</string>
    <string name="title_delete_album">Delete this album</string>
    <string name="title_done">done</string>
</resources>
